force-app/main/default/objects/Test_Case_Generator_Log__c/Test_Case_Generator_Log__c.object-meta.xml
<CustomObject>
    <label>Test Case Generator Log</label>
    <nameField>
        <label>Test Case Generator Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Case Generator Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>