force-app/main/default/objects/Test_Case_Generator_Log__c/fields/Log_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Detail__c</fullName>
    <label>Log Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>