force-app/main/default/objects/Test_Case_Generator_Log__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>